--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -41,7 +42,7 @@
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">Departure</label>
-                    <input class="inp-style" type="date" name="">
+                        <input class="inp-style" type="date" name="">
                 </div>
                 <div class="input-group">
                     <label for="">Return</label>
@@ -51,20 +52,26 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <!-- <input id="first-class-count" class="inp-style inp-width" type="number" name=""> -->
+                    <input id="first-class-count" type="text" class="form-control text-center" value="1">
                 </div>
                 <div class="plus-minus-btn">
-                    <p>+ -</p>
+                    <!--<p><span id="firstClassIncrease">+</span> <span id="firstClassDecrease">-</span></p> -->
+                    <button id="first-class-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                    <button id="first-class-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
                 </div>
             </div>
-            
+
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <!-- <input class="inp-style inp-width" type="number" name=""> -->
+                    <input id="economy-class-count" type="text" class="form-control text-center" value="1">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                    <!--<p> <span>+</span> <span>-</span> </p> -->
+                    <button id="economy-class-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                    <button id="economy-class-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
                 </div>
             </div>
             <div class="calculations">
@@ -100,11 +107,51 @@
 
         <div class="booking-content">
             <h1>discover <br> around the world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise voluptatibus quam</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias
+                veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise
+                voluptatibus quam</p>
         </div>
-    </section>
+        </section>
 
-    <!--Thank You-->
+        <script>
+        // FIRST-CLASS
+         document.getElementById("first-class-increase").addEventListener("click", function (){
+         const firstClassInput = document.getElementById("first-class-count");
+         const firstClassCount = parseInt(firstClassInput.value);
+         const firstClassNewCount = firstClassCount + 1;
+         firstClassInput.value = firstClassNewCount;
+         const ticketTotalCost = firstClassNewCount * 150;
+        });
+
+        document.getElementById("first-class-decrease").addEventListener("click", function (){
+         const firstClassInput = document.getElementById("first-class-count");
+         const firstClassCount = parseInt(firstClassInput.value);
+         const firstClassNewCount = firstClassCount - 1;
+         firstClassInput.value = firstClassNewCount;
+         const ticketTotalCost = firstClassNewCount * 150;
+        });
+
+
+        //ECONOMY-CLASS
+        document.getElementById("economy-class-increase").addEventListener("click", function (){
+         const economyClassInput = document.getElementById("economy-class-count");
+         const economyClassCount = parseInt(economyClassInput.value);
+         const economyClassNewCount = economyClassCount + 1;
+         economyClassInput.value = economyClassNewCount;
+         const ticketTotalCost = economyClassNewCount * 100;
+        });
+
+        document.getElementById("economy-class-decrease").addEventListener("click", function (){
+         const economyClassInput = document.getElementById("economy-class-count");
+         const economyClassCount = parseInt(economyClassInput.value);
+         const economyClassNewCount = economyClassCount - 1;
+         economyClassInput.value = economyClassNewCount;
+         const ticketTotalCost = economyClassNewCount * 100;
+        });
+
+
+        </script>
+        <!--Thank You-->
 </body>
 
 </html>
