--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                 </div>
                 <div class="plus-minus-btn">
                     <!--<p><span id="firstClassIncrease">+</span> <span id="firstClassDecrease">-</span></p> -->
-                    <button id="first-class-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
-                    <button id="first-class-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <button onclick="handleTicketChange('first', true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                    <button onclick="handleTicketChange('first', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <h6 id="first-class-total">$150</h6>
                 </div>
             </div>
 
@@ -70,8 +71,9 @@
                 </div>
                 <div class="plus-minus-btn">
                     <!--<p> <span>+</span> <span>-</span> </p> -->
-                    <button id="economy-class-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
-                    <button id="economy-class-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <button onclick="handleTicketChange('economy', true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                    <button onclick="handleTicketChange('economy', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <h6 id="economy-class-total">$100</h6>
                 </div>
             </div>
             <div class="calculations">
@@ -80,7 +82,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p>$<span id="total-cost">00</span></p>
                     </div>
                 </div>
 
@@ -89,7 +91,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="vat-amount">$50</p>
                     </div>
                 </div>
                 <hr>
@@ -98,7 +100,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="total">$550</p>
                     </div>
                 </div>
             </div>
@@ -114,40 +116,100 @@
         </section>
 
         <script>
+        //COMBINE FOR FIRST/ECONOMY-CLASS
+            function handleTicketChange(grade, isIncrease) {
+                const ticketInput = document.getElementById(grade + '-class-count');
+                const ticketCount = parseInt(ticketInput.value);
+                let ticketNewCount = ticketCount;
+                if (isIncrease == true) {
+                    ticketNewCount = ticketCount + 1;
+                }
+                if (isIncrease == false && ticketCount > 0) {
+                    ticketNewCount = ticketCount - 1;
+                }
+                ticketInput.value = ticketNewCount;
+                // const economyClassTotal = economyClassNewCount * 100;
+                let ticketTotal = 0;
+                if(grade == 'economy'){
+                    ticketTotal = ticketNewCount * 100;
+                }
+                if(grade == 'first'){
+                    ticketTotal = ticketNewCount * 150;
+                }
+                document.getElementById(grade + "-class-total").innerText = '$' + ticketTotal;
+                calculateTotal();
+            }
+
+        function calculateTotal(){
+            const economyClassInput = document.getElementById('economy-class-count');
+            const economyClassCount = parseInt(economyClassInput.value);
+
+            const firstClassInput = document.getElementById('first-class-count');
+            const firstClassCount = parseInt(firstClassInput.value);
+
+            const totalTicketCost = economyClassCount * 100 + firstClassCount * 150;
+
+            document.getElementById('total-cost').innerText = '$' + totalTicketCost;
+
+            const vat = totalTicketCost * 0.10;
+            document.getElementById('vat-amount').innerText = '$' + vat;
+
+            const grandTotal = totalTicketCost + vat;
+            document.getElementById('total').innerText = '$' + grandTotal;
+
+        }
+        //CAN USE THESE CODES IN CASE PROBLEM:
         // FIRST-CLASS
-         document.getElementById("first-class-increase").addEventListener("click", function (){
-         const firstClassInput = document.getElementById("first-class-count");
-         const firstClassCount = parseInt(firstClassInput.value);
-         const firstClassNewCount = firstClassCount + 1;
-         firstClassInput.value = firstClassNewCount;
-         const ticketTotalCost = firstClassNewCount * 150;
-        });
+        // function handleFirstClassTicketChange(isIncrease) {
+        //         const firstClassInput = document.getElementById("first-class-count");
+        //         const firstClassCount = parseInt(firstClassInput.value);
+        //         let firstClassNewCount = firstClassCount;
+        //         if (isIncrease == true) {
+        //             firstClassNewCount = firstClassCount + 1;
+        //         }
+        //         if (isIncrease == false && firstClassCount > 0) {
+        //             firstClassNewCount = firstClassCount - 1;
+        //         }
+        //         firstClassInput.value = firstClassNewCount;
+        //         const firstClassTotal = firstClassNewCount * 150;
+        //         document.getElementById("first-class-total").innerText = '$' + firstClassTotal;
+        //     }         
 
-        document.getElementById("first-class-decrease").addEventListener("click", function (){
-         const firstClassInput = document.getElementById("first-class-count");
-         const firstClassCount = parseInt(firstClassInput.value);
-         const firstClassNewCount = firstClassCount - 1;
-         firstClassInput.value = firstClassNewCount;
-         const ticketTotalCost = firstClassNewCount * 150;
-        });
+        // //ECONOMY-CLASS
+        //     function handleEconomyClassTicketChange(isIncrease) {
+        //         const economyClassInput = document.getElementById("economy-class-count");
+        //         const economyClassCount = parseInt(economyClassInput.value);
+        //         let economyClassNewCount = economyClassCount;
+        //         if (isIncrease == true) {
+        //             economyClassNewCount = economyClassCount + 1;
+        //         }
+        //         if (isIncrease == false && economyClassCount > 0) {
+        //             economyClassNewCount = economyClassCount - 1;
+        //         }
+        //         economyClassInput.value = economyClassNewCount;
+        //         const economyClassTotal = economyClassNewCount * 100;
+        //         document.getElementById("economy-class-total").innerText = '$' + economyClassTotal;
+        //     }
 
+        //OLD CODE
+        // document.getElementById("economy-class-increase").addEventListener("click", function (){
+        //  const economyClassInput = document.getElementById("economy-class-count");
+        //  const economyClassCount = parseInt(economyClassInput.value);
+        //  const economyClassNewCount = economyClassCount + 1;
+        //  economyClassInput.value = economyClassNewCount;
+        //  const economyClassTotal = economyClassNewCount * 100;
+        //  document.getElementById("economy-class-total").innerText = economyClassTotal;    
+        // });
 
-        //ECONOMY-CLASS
-        document.getElementById("economy-class-increase").addEventListener("click", function (){
-         const economyClassInput = document.getElementById("economy-class-count");
-         const economyClassCount = parseInt(economyClassInput.value);
-         const economyClassNewCount = economyClassCount + 1;
-         economyClassInput.value = economyClassNewCount;
-         const ticketTotalCost = economyClassNewCount * 100;
-        });
+        // document.getElementById("economy-class-decrease").addEventListener("click", function (){
+        //  const economyClassInput = document.getElementById("economy-class-count");
+        //  const economyClassCount = parseInt(economyClassInput.value);
+        //  const economyClassNewCount = economyClassCount - 1;
+        //  economyClassInput.value = economyClassNewCount;
+        //  const economyClassTotal = economyClassNewCount * 100;
+        //  document.getElementById("economy-class-total").innerText = economyClassTotal;       
+        // });
 
-        document.getElementById("economy-class-decrease").addEventListener("click", function (){
-         const economyClassInput = document.getElementById("economy-class-count");
-         const economyClassCount = parseInt(economyClassInput.value);
-         const economyClassNewCount = economyClassCount - 1;
-         economyClassInput.value = economyClassNewCount;
-         const ticketTotalCost = economyClassNewCount * 100;
-        });
 
 
         </script>
